infra/traefik/traefik-forward-auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik-forward-auth
  namespace: traefik-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik-forward-auth
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: traefik-forward-auth
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - image: thomseddon/traefik-forward-auth:2
          imagePullPolicy: Always
          name: traefik-forward-auth
          ports:
            - containerPort: 4181
              protocol: TCP
          volumeMounts:
            - name: configs
              mountPath: /config
              subPath: traefik-forward-auth.ini

      volumes:
        - name: configs
          configMap:
            name: configs
        - name: traefik-forward-auth-secrets
          secret:
            secretName: traefik-forward-auth-secrets
