infra/traefik/traefik-forward-auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-forward-auth
  namespace: traefik
spec:
  type: ClusterIP
  selector:
    app: traefik-forward-auth
  ports:
    - name: auth-http
      port: 4181
