infra/traefik/traefik-forward-auth/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard-auth
  namespace: traefik-system
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`auth-traefik.stonegarden.dev`)
      kind: Rule
      services:
        - name: traefik-forward-auth
          port: 4181
      middlewares:
        - name: traefik-forward-auth
